--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ body {
     overflow-x: hidden;
 }
 
+.body-about-page {
+    overflow-x: unset;
+}
+
 img {
     width: 100%;
     height: 100%;
@@ -2009,6 +2013,8 @@ footer {
     padding: 10px;
     padding-left: 5%;
     border-top: 1px solid rgba(131, 131, 131, 0.5);
+    display: flex;
+    align-items: center;
 }
 
 .choose-box-info h3::after {
